--- a/DockerfileAPIServer
+++ b/DockerfileAPIServer
@@ -3,17 +3,42 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 FROM golang:1.24 AS builder
+ARG TARGETOS
+ARG TARGETARCH
+
+RUN apt-get update && apt-get install -y ca-certificates git-core ssh tzdata
+RUN mkdir -p -m 0700 /root/.ssh && ssh-keyscan github.com >> /root/.ssh/known_hosts
+RUN git config --global url.ssh://git@github.com/.insteadOf https://github.com/
+
 ARG USERID=10000
-# no need to include cgo bindings
-ENV CGO_ENABLED=0 GOOS=linux GOARCH=amd64
-
-# add ca certificates and timezone data files
-RUN apt-get install --yes --no-install-recommends ca-certificates tzdata
-
 # add unprivileged user
 RUN adduser --shell /bin/false --uid $USERID --disabled-login --home /app/ --no-create-home --gecos '' app \
     && sed -i -r "/^(app|root)/!d" /etc/group /etc/passwd \
     && sed -i -r 's#^(.*):[^:]*$#\1:/bin/false#' /etc/passwd
+
+WORKDIR /workspace
+# Copy the Go Modules manifests
+COPY go.mod go.mod
+COPY go.sum go.sum
+# cache deps before building and copying source so that we don't need to re-download as much
+# and so that source changes don't invalidate our downloaded layer
+RUN --mount=type=cache,target=/root/.cache/go-build \
+    --mount=type=ssh \
+    go mod download
+
+# Copy the go source
+COPY cmd/ cmd/
+COPY apis/ apis/
+COPY pkg/ pkg/
+
+# Build
+# the GOARCH has not a default value to allow the binary be built according to the host where the command
+# was called. For example, if we call make docker-build in a local env which has the Apple Silicon M1 SO
+# the docker BUILDPLATFORM arg will be linux/arm64 when for Apple x86 it will be linux/amd64. Therefore,
+# by leaving it empty we can ensure that the container and binary shipped on it will have the same platform.
+RUN --mount=type=cache,target=/root/.cache/go-build \
+    --mount=type=ssh \
+    CGO_ENABLED=0 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} go build -a -o api-server cmd/api-server/main.go
 
 #
 #FROM scratch
@@ -26,7 +51,7 @@ COPY --from=builder /etc/passwd /etc/group /etc/shadow /etc/
 # add-in our ca certificates
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-COPY --chown=$USERID:$USERID api-server /app/
+COPY --from=builder  --chown=$USERID:$USERID /workspace/api-server /app/
 WORKDIR /app
 
 # from now on, run as the unprivileged user
