--- a/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
@@ -137,6 +137,11 @@ spec:
                 x-kubernetes-validations:
                 - message: skipVerify is immutable
                   rule: self == oldSelf
+              targetName:
+                description: |-
+                  TargetName specifies the target field value in gNMI Path prefix
+                  Examples: "OC-YANG" (SONiC), "openconfig" (some vendors), or empty
+                type: string
               timeout:
                 default: 10s
                 type: string
