move target to config domain for subresources

--- a/artifacts/rbac-cluster-role-api-server.yaml
+++ b/artifacts/rbac-cluster-role-api-server.yaml
@@ -15,6 +15,6 @@ rules:
 - apiGroups: ["flowcontrol.apiserver.k8s.io"]
   resources: ["flowschemas", "prioritylevelconfigurations"]
   verbs: ["get", "watch", "list"]
-- apiGroups: ["inv.sdcio.dev"]
+- apiGroups: ["config.sdcio.dev"]
   resources: ["targets", "targets/status"]
   verbs: ["get", "watch", "list"]
